[package]
name = "pallet-utxo"
version = "0.1.0"
authors = ["BCarlaYap <2826165+BCarlaYap@users.noreply.github.com>"]
edition = "2018"

[features]
runtime-benchmarks = ["frame-benchmarking"]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-core/std'
]

[dependencies]
hex-literal = "0.2.1"
log = "0.4.8"
serde = '1.0.119'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.contract-provider]
default-features = false
path = "../../traits/contract-provider/"

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
tag = 'monthly-2021-08'
version = '4.0.0-dev'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'
version = '4.0.0-dev'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'
version = '4.0.0-dev'

[dev-dependencies.sp-keystore]
version = "0.10.0-dev"
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'

[dev-dependencies.pallet-aura]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'
version = '4.0.0-dev'

[dev-dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'
version = '0.10.0-dev'

[dev-dependencies.pallet-timestamp]
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'
version = '4.0.0-dev'
