[package]
name = "utxo-api"
version = "3.0.0"
edition = "2018"
authors = ["RBB Lab"]
description = "UTXO API for programmable pools implemented by pallet-utxo"
license = "MIT"

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[features]
default = ['std']
std = [
    'frame-support/std',
	'sp-std/std',
]
