[package]
name = "pallet-utxo-tokens"
version = "0.1.0"
authors = ["RBB Lab"]
edition = "2018"

[dependencies]
hex-literal = "0.2.1"
log = "0.4.8"

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'
branch = "master"

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.codec]
package = "parity-scale-codec"
version = "2.0.0"
default-features = false
features = ["derive"]
