[package]
name = "pallet-utxo-rpc-runtime-api"
version = "0.1.0"
authors = ["Mintlayer"]
edition = "2018"

[dependencies]
serde = { version = "1.0.104", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-api = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
sp-runtime = { version = "3.0.0", default_features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05' }
frame-support = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}

[dev-dependencies]
serde_json = "1.0.48"

[features]
default = ["std"]
std = [
    "serde",
    "sp-api/std",
    "codec/std",
    "sp-runtime/std",
    "frame-support/std",
]
try-runtime = ['frame-support/try-runtime']
