[package]
name = "pallet-utxo-rpc-runtime-api"
version = "0.1.0"
authors = ["RBB Lab"]
edition = "2018"

[dependencies.serde]
version = "1.0.104"
optional = true
features = ["derive"]

[dependencies.codec]
package = "parity-scale-codec"
version = "2.0.0"
default-features = false
features = ["derive"]

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'
version = '4.0.0-dev'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'
version = '4.0.0-dev'

[dev-dependencies]
serde_json = "1.0.48"

[features]
default = ["std"]
std = [
    "serde",
    "sp-api/std",
    "codec/std",
    "sp-runtime/std",
    "frame-support/std",
]
try-runtime = ['frame-support/try-runtime']
